# browsehand

./: .gitignore  IMPLEMENTATION_SUMMARY.md  LICENSE  PHASE2_SUMMARY.md  QUICKSTART.md  README.md  SCENARIOS.md  TESTING_GUIDE.md  test-page.html
.github/workflows/: deploy.yml  release.yml
chrome-extension/: ICONS_README.txt  background.js  content.js  icon16.png.txt  manifest.json  popup.html  popup.js
docs/: astro.config.mjs  package.json
docs/public/: CNAME
docs/src/content/docs/: index.mdx  installation.mdx  quick-start.mdx
docs/src/content/docs/examples/: google-maps.mdx  naver-map.mdx
docs/src/content/docs/guides/: quickstart.md  scenarios.md
docs/src/content/docs/reference/: tools.md  troubleshooting.md
docs/src/content/docs/tools/: index.mdx
e2e-tests/: jest.config.js  package.json
e2e-tests/tests/: e2e.test.js  mcp-integration.test.js
mcp-server/: index.js  package.json
mcp-server-rs/: Cargo.toml  test_mcp.sh
mcp-server-rs/src/: main.rs  tools.rs  websocket.rs
npm-package/: README.md  bin.js  install.js  package.json
