[package]
name = "browsehand"
version = "1.0.0"
edition = "2021"
authors = ["BrowseHand Team"]
description = "AI-powered browser automation MCP server"
license = "MIT"

[[bin]]
name = "browsehand"
path = "src/main.rs"

[dependencies]
# MCP SDK
rmcp = { version = "0.13", features = ["server", "macros", "transport-io"] }
async-trait = "0.1"

# Async runtime
tokio = { version = "1", features = ["full", "sync"] }

# WebSocket
tokio-tungstenite = "0.24"
futures-util = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# CSV
csv = "1"

# Error handling
anyhow = "1"
thiserror = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utils
dirs = "5"
uuid = { version = "1", features = ["v4"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
